fix: Align footer separator to center

--- a/css/global.css
+++ b/css/global.css
@@ -51,6 +51,7 @@ p.subtitle {
 }
 
 #largeline {
+    text-align: center;
     padding-bottom: 2%;
 }
 
