--- a/css/karaoke.css
+++ b/css/karaoke.css
@@ -31,6 +31,7 @@ ul {
 }
 
 #largeline {
+    text-align: center;
     padding-bottom: 2%;
 }
 
